# LEAPS

./: .gitignore  README.md  design-qa.md  pyproject.toml  pysidedeploy.spec  requirements.txt
.github/workflows/: release.yml
Hops Archive/: README.md
hops/: __init__.py  __main__.py  __run__.py  application_4_alignment.py
hops/hops_tools/: centroids_and_stars.py  image_analysis.py
hops/pylightcurve41/: __init__.py  spacetime.py
hops/pylightcurve41/models/: exoplanet.py  exoplanet_lc.py
leaps/: __init__.py  app.py  catalog.py  diagnostics.py  exports.py  filters.py  fits_inventory.py  models.py  offline.py  platform_support.py  project.py  science.py  secondary_ml.py  targets.py  tess.py
leaps/assets/: leaps-app-icon.icns
leaps/ui/: __init__.py  main_window.py  pages.py  settings_dialog.py  theme.py  widgets.py  workers.py
packaging/: LEAPS-macos.spec  LEAPS-windows.spec  entitlements.plist  leaps.iss
scripts/: build_brand_assets.py  build_macos.sh  build_windows.ps1
tests/: conftest.py  test_exports.py  test_fitting_preview_clear.py  test_fitting_reliability.py  test_inventory_diagnostics.py  test_light_curve_reapproval.py  test_light_curve_review.py  test_manifest_save_retry.py  test_offline.py  test_packaging.py  test_project.py  test_science_services.py  test_secondary_eclipse.py  test_secondary_ml.py  test_targets.py  test_tess_import.py  test_ui.py  test_windows_regressions.py
